# MaiConv

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  TODO.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
include/maiconv/core/: assets.hpp  chart.hpp  format.hpp  io.hpp  ma2.hpp  media.hpp  simai.hpp
include/maiconv/core/media/: media_audio.hpp  media_cover.hpp  media_shared.hpp  media_video.hpp
include/maiconv/core/simai/: chart.hpp  chart_definitions.hpp  compiler.hpp  document.hpp  enums.hpp  note.hpp  parser.hpp  tokenizer.hpp
include/uabe/AssetsTools/: AssetBundleFileFormat.h  defines.h
src/cli/: main.cpp
src/core/: assets.cpp  chart.cpp  format.cpp  io.cpp  ma2.cpp  media.cpp  media_audio.cpp  media_backend.cpp  media_cover.cpp  media_shared.cpp  media_shared.hpp  media_video.cpp  minimp4_impl.c  simai.cpp  simai_compiler.cpp  simai_parser.cpp  simai_tokenizer.cpp  unity_assetbundle.cpp
src/core/unity_uabe/AssetsTools/: AssetBundleFileFormat.cpp  AssetBundleFileFormat.h  AssetBundleFileTable.cpp  AssetBundleFileTable.h  AssetTypeClass.cpp  AssetTypeClass.h  AssetsFileFormat.cpp  AssetsFileFormatTypes.h  AssetsFileReader.cpp  AssetsFileTable.h  AssetsReplacer.h  BundleReplacer.cpp  BundleReplacer.h  ClassDatabaseFile.cpp  InternalBundleReplacer.h  stdafx.h
src/core/unity_uabe/inc/LZMA/: 7zTypes.h  LzmaLib.h
src/core/unity_uabe/libCompression/: Threads.h  lz4dec.cpp  lz4e.h  lz4enc.cpp
src/core/unity_uabe/libStringConverter/: convert.cpp
src/core/vgmstream/: CMakeLists.txt
src/lz4/: 7zTypes.h  Compiler.h  LzFind.h  LzFindMt.h  LzHash.h  LzmaDec.h  LzmaEnc.h  Precomp.h  Threads.h  api.h  lz4.h  lz4dec.h  lz4e.h  lz4enc.h  lz4frame.h  lz4frame_static.h  lz4hc.h  xxhash.h
src/uabe/AssetsTools/: AssetBundleFileFormat.cpp  AssetBundleFileFormat.h  AssetBundleFileTable.h  AssetTypeClass.h  AssetsFileFormat.h  AssetsFileFormatTypes.h  AssetsFileReader.h  AssetsFileTable.h  AssetsReplacer.h  BundleReplacer.h  ClassDatabaseFile.cpp  ClassDatabaseFile.h  InternalAssetsReplacer.h  InternalBundleReplacer.h  defines.h  stdafx.h
src/uabe/Texture/: lodepng.cpp  lodepng.h
src/uabe/libCompression/: 7zTypes.h  Compiler.h  LzFind.h  LzFindMt.h  LzHash.h  LzmaDec.h  LzmaEnc.h  Precomp.h  Threads.h  api.h  lz4.h  lz4dec.h  lz4e.h  lz4enc.h  lz4frame.h  lz4frame_static.h  lz4hc.h  xxhash.h
src/uabe/libStringConverter/: convert.cpp  convert.h
tests/unit/: test_assets.cpp  test_chart.cpp  test_ma2.cpp  test_media.cpp  test_simai.cpp  test_uabe_lz4.cpp
